# kernel

./: .gitignore  CMakeLists.txt  LICENSE  linker.lds
include/: allocator.h  exception.h  main.h  renderer.h  share.h
src/: allocator.c  main.c  renderer.c
